# SIC-XE-Assembler

./: .gitignore  CMakeLists.txt  assembler.cpp  assembler.h  instructions.cpp  instructions.h
php/: bower.json  composer.json  config.php  index.php
php/auth/: auth.inc.php  index.php
php/auth/github/: index.php
php/auth/google/: index.php
src/: CMakeLists.txt  assembler.cpp  assembler.h  instructions.cpp  instructions.h  main.cpp
